kyy-k8s-config/src/app/tools/jenkins/jenkins-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: jenkins
  name: jenkins
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      securityContext:
        fsGroup: 999
      containers:
        - env:
            - name: JAVA_OPTS
              value: -Duser.timezone=Asia/Shanghai
            - name: aliyun_logs_dbstdout
              value: stdout
          image: jenkins/jenkins:lts
          name: jenkins
          ports:
            - containerPort: 8080
            - containerPort: 5000
          resources:
            limits:
              cpu: 3
          volumeMounts:
            - mountPath: /var/jenkins_home
              name: jenkins-home
      restartPolicy: Always
      volumes:
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: jenkins-home-claim
