kyy-k8s-config/src/app/tools/jenkins/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jenkins
  name: jenkins
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
    - name: "50000"
      port: 50000
      targetPort: 50000
  selector:
    app: jenkins
