kyy-k8s-config/src/app/tools/jenkins/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: jenkins
  name: jenkins
spec:
  rules:
    - host: ci.kaoyaya.com
      http:
        paths:
          - backend:
              serviceName: jenkins
              servicePort: 8080
